fix: products_overview page mobile layout overflow; fix: add contact_info footer to cart and checkout view

--- a/OPG_Plac/static/subpages/cart/cart.css
+++ b/OPG_Plac/static/subpages/cart/cart.css
@@ -384,10 +384,15 @@
 	min-height: 200px;
 	margin-bottom: 200px;
 
+	padding-left: 15px;
+	padding-right: 15px;
+
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
+
+	text-align: center;
 }
 
 .cart-empty-notification-container button{
